[package]
name = "heavykeeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
heavykeeper = "0.2.2"
libc = "0.2"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["ffi"]
ffi = []
